tweaked contact page

--- a/styles/sass/screen.scss
+++ b/styles/sass/screen.scss
@@ -309,6 +309,7 @@ nav {
   line-height: 1.5em;
   padding: 0 50px;
   margin: 140px auto 0 auto;
+  h6, h4 { text-align: center;}
   .wrapper {
     height: 600px;
     display: grid;
