--- a/views/contact.html
+++ b/views/contact.html
@@ -5,7 +5,9 @@
 </script>
 
 <div id="contactPage" class="viewFade">
-  <h4 id="instructions">Would you like to send me a message? Fillout this form!</h4>
+  <h4 id="instructions">Would you like to send me a message? Fillout this form!
+  <h6>For demo purposes only</h6></h4>
+
 
   <div class="wrapper">
     <div class="one">
