--- a/views/navbar.html
+++ b/views/navbar.html
@@ -18,28 +18,28 @@
 				  <a href="https://github.com/Aregatou" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
 				</div>
 				<li>
-					<a class="hvr-float" href="#!/home" onclick="this.blur();">
+					<a class="hvr-float" href="#/home" onclick="this.blur();">
 						<i class="fa fa-home" aria-hidden="true"></i>
 						Home
 					</a>
 				</li>
 
         <li>
-					<a class="hvr-float" href="#!/gallery" onclick="this.blur();">
+					<a class="hvr-float" href="#/gallery" onclick="this.blur();">
 						<i class="fa fa-user-circle" aria-hidden="true"></i>
 						Art
 					</a>
 				</li>
 
 				<li>
-					<a class="hvr-float" href="#!/videos" onclick="this.blur();">
-						<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+					<a class="hvr-float" href="#/videos" onclick="this.blur();">
+						<i class="fa fa-video-camera" aria-hidden="true"></i>
 						Videos
 					</a>
 				</li>
 
 				<li>
-					<a class="hvr-float" href="#!/contact" onclick="this.blur();">
+					<a class="hvr-float" href="#/contact" onclick="this.blur();">
 						<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
 						Contact
 					</a>
