--- a/styles/stylesheets/screen.css
+++ b/styles/stylesheets/screen.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
-/* line 5, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -21,45 +21,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -174,27 +174,54 @@ nav div ul li a i {
   margin-right: 5px;
 }
 
-/* line 89, ../sass/screen.scss */
+@media (max-width: 650px) {
+  /* line 88, ../sass/screen.scss */
+  #aboutMe {
+    font-size: 1em !important;
+    min-width: 300px !important;
+  }
+  /* line 91, ../sass/screen.scss */
+  #aboutMe h1, #aboutMe div {
+    margin: 0 auto !important;
+    min-width: 300px !important;
+  }
+
+  /* line 96, ../sass/screen.scss */
+  #aboutBox {
+    padding: 5px !important;
+    font-size: 70%;
+  }
+
+  /* line 100, ../sass/screen.scss */
+  .selfie {
+    height: 20% !important;
+  }
+}
+/* line 105, ../sass/screen.scss */
 #bg {
   border-bottom: 3px solid #ff5f14;
   outline: 1px solid rgba(0, 0, 0, 0.3);
 }
-/* line 92, ../sass/screen.scss */
+/* line 108, ../sass/screen.scss */
 #bg #aboutMe {
   width: 100%;
   min-height: 600px;
-  min-width: 600px;
-  font-size: 16px;
+  min-width: 300px;
+  font-size: 1.2em;
   position: relative;
   padding: 50px 50px 50px 25%;
   margin: 0 auto;
   color: #fdfcfc;
 }
-/* line 101, ../sass/screen.scss */
+/* line 117, ../sass/screen.scss */
+#bg #aboutMe h1, #bg #aboutMe div {
+  margin-left: 20%;
+}
+/* line 120, ../sass/screen.scss */
 #bg #aboutMe ul {
   padding: 0;
 }
-/* line 103, ../sass/screen.scss */
+/* line 122, ../sass/screen.scss */
 #bg #summary {
   font-size: 1.3em;
   width: 60%;
@@ -204,10 +231,10 @@ nav div ul li a i {
   top: -120px;
   color: black;
 }
-/* line 111, ../sass/screen.scss */
+/* line 130, ../sass/screen.scss */
 #bg #summary #aboutBox {
   height: 150px;
-  min-width: 460px;
+  min-width: 300px;
   line-height: 13px;
   text-align: center;
   padding: 10px;
@@ -215,64 +242,65 @@ nav div ul li a i {
   background-color: white;
   box-shadow: 0 3px 5px rgba(100, 100, 100, 0.5);
 }
-/* line 120, ../sass/screen.scss */
+/* line 139, ../sass/screen.scss */
 #bg #summary #aboutBox h2 {
   color: black;
 }
-/* line 121, ../sass/screen.scss */
+/* line 140, ../sass/screen.scss */
 #bg #summary #aboutBox p {
-  font-size: 14px;
+  font-size: 1em;
   opacity: .8;
 }
-/* line 125, ../sass/screen.scss */
+/* line 144, ../sass/screen.scss */
 #bg #summary #aboutBox span {
   font-weight: bold;
   color: black;
 }
-/* line 131, ../sass/screen.scss */
+/* line 150, ../sass/screen.scss */
 #bg #essay {
-  min-width: 500px;
+  min-width: 300px;
   margin-top: 30px;
   padding: 5px;
   color: black;
 }
-/* line 136, ../sass/screen.scss */
+/* line 155, ../sass/screen.scss */
 #bg #essay h3 {
   font-size: 2.5em;
 }
-/* line 137, ../sass/screen.scss */
+/* line 156, ../sass/screen.scss */
 #bg #essay ul {
   line-height: 23px;
   padding-left: 20px;
 }
-/* line 140, ../sass/screen.scss */
+/* line 159, ../sass/screen.scss */
 #bg #essay ul li {
   padding-left: 5px;
   list-style-type: square;
 }
-/* line 145, ../sass/screen.scss */
+/* line 164, ../sass/screen.scss */
 #bg #essay h4 {
   font-size: 1.3em;
   text-decoration: underline;
   margin-top: 20px;
 }
-/* line 150, ../sass/screen.scss */
+/* line 169, ../sass/screen.scss */
 #bg #essay span {
   margin-bottom: 50px;
   display: block;
 }
-/* line 155, ../sass/screen.scss */
+/* line 174, ../sass/screen.scss */
 #bg #techList {
   margin-top: 20px;
 }
-/* line 157, ../sass/screen.scss */
+/* line 176, ../sass/screen.scss */
 #bg #techList ul {
   padding: 0 20px;
 }
 
-/* line 160, ../sass/screen.scss */
+/* line 179, ../sass/screen.scss */
 .selfie {
   height: 80vh;
+  min-height: 300px;
   position: relative;
   top: -43px;
   background: linear-gradient(rgba(255, 95, 20, 0.9), rgba(168, 50, 121, 0.4)), url("/styles/assets/selfie.jpg");
@@ -280,18 +308,18 @@ nav div ul li a i {
   background-position: center center;
 }
 
-/* line 174, ../sass/screen.scss */
+/* line 194, ../sass/screen.scss */
 #mainContent {
   max-width: 1300px;
   padding: 0 50px;
   margin: 140px auto 0 auto;
 }
-/* line 179, ../sass/screen.scss */
+/* line 199, ../sass/screen.scss */
 #mainContent art-disp div {
   height: auto;
   width: 100%;
   max-height: 700px;
-  min-width: 500px;
+  min-width: 300px;
   text-align: center;
   position: relative;
   margin-bottom: 20px;
@@ -301,35 +329,35 @@ nav div ul li a i {
   overflow: auto;
   object-fit: contain;
 }
-/* line 192, ../sass/screen.scss */
+/* line 212, ../sass/screen.scss */
 #mainContent art-disp div #left {
   left: 0;
 }
-/* line 193, ../sass/screen.scss */
+/* line 213, ../sass/screen.scss */
 #mainContent art-disp div #right {
   right: 0;
 }
-/* line 194, ../sass/screen.scss */
+/* line 214, ../sass/screen.scss */
 #mainContent art-disp div #ex1 {
   width: 80%;
 }
-/* line 195, ../sass/screen.scss */
+/* line 215, ../sass/screen.scss */
 #mainContent art-disp div .zoom {
   display: inline-block;
   position: relative;
 }
-/* line 199, ../sass/screen.scss */
+/* line 219, ../sass/screen.scss */
 #mainContent art-disp div .zoom img {
   display: inline-block;
 }
-/* line 200, ../sass/screen.scss */
+/* line 220, ../sass/screen.scss */
 #mainContent art-disp div .zoom img::selection {
   background-color: transparent;
 }
-/* line 201, ../sass/screen.scss */
+/* line 221, ../sass/screen.scss */
 #mainContent art-disp div img {
   height: auto;
-  width: 100%;
+  width: 90%;
   min-height: 300px;
   max-height: 600px;
   display: inline-block;
@@ -337,7 +365,7 @@ nav div ul li a i {
   object-fit: contain;
   overflow: auto;
 }
-/* line 211, ../sass/screen.scss */
+/* line 231, ../sass/screen.scss */
 #mainContent art-disp div button {
   height: 100%;
   width: 40px;
@@ -354,21 +382,27 @@ nav div ul li a i {
   background-color: white;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-/* line 229, ../sass/screen.scss */
+/* line 246, ../sass/screen.scss */
+#mainContent art-disp div button:focus {
+  box-shadow: none;
+}
+/* line 251, ../sass/screen.scss */
 #mainContent art-gall {
   flex: 1;
 }
-/* line 231, ../sass/screen.scss */
+/* line 253, ../sass/screen.scss */
 #mainContent art-gall .thumbnail {
   height: 275px;
   position: relative;
   outline: 0;
   border: none;
+  cursor: pointer;
 }
-/* line 236, ../sass/screen.scss */
+/* line 259, ../sass/screen.scss */
 #mainContent art-gall .thumbnail img {
   height: 265px;
   width: 180%;
+  min-width: 250px;
   text-align: center;
   padding: 3px;
   position: absolute;
@@ -379,43 +413,43 @@ nav div ul li a i {
   box-shadow: 0 3px 10px rgba(100, 100, 100, 0.5);
   object-fit: cover;
 }
-/* line 250, ../sass/screen.scss */
+/* line 274, ../sass/screen.scss */
 #mainContent art-gall button {
   width: 100%;
   font-size: 1.5em;
   border: 1px solid #ff5f14;
   margin-bottom: 30px;
 }
-/* line 255, ../sass/screen.scss */
+/* line 279, ../sass/screen.scss */
 #mainContent art-gall button:focus {
   outline: none;
 }
 
-/* line 261, ../sass/screen.scss */
+/* line 285, ../sass/screen.scss */
 #videos {
   flex: 1;
   max-width: 1300px;
   margin: 140px auto 0 auto;
   padding: 0 50px;
 }
-/* line 266, ../sass/screen.scss */
+/* line 290, ../sass/screen.scss */
 #videos span {
   max-height: 600px;
   display: block;
   background-color: black;
 }
-/* line 271, ../sass/screen.scss */
+/* line 295, ../sass/screen.scss */
 #videos .embed-responsive {
   width: 70%;
   max-width: 800px;
   margin: 20px auto;
 }
-/* line 275, ../sass/screen.scss */
+/* line 299, ../sass/screen.scss */
 #videos .embed-responsive .embed-responsive-item {
   width: 100%;
   max-height: 600px;
 }
-/* line 280, ../sass/screen.scss */
+/* line 304, ../sass/screen.scss */
 #videos .thumbnail {
   height: 275px;
   position: relative;
@@ -423,7 +457,7 @@ nav div ul li a i {
   border: none;
   cursor: pointer;
 }
-/* line 286, ../sass/screen.scss */
+/* line 310, ../sass/screen.scss */
 #videos .thumbnail img {
   height: 265px;
   width: 180%;
@@ -438,12 +472,12 @@ nav div ul li a i {
   object-fit: cover;
 }
 
-/* line 303, ../sass/screen.scss */
+/* line 327, ../sass/screen.scss */
 #instructions {
   text-align: center;
 }
 
-/* line 304, ../sass/screen.scss */
+/* line 328, ../sass/screen.scss */
 #contactPage {
   min-width: 500px;
   max-width: 900px;
@@ -453,11 +487,11 @@ nav div ul li a i {
   padding: 0 50px;
   margin: 140px auto 0 auto;
 }
-/* line 312, ../sass/screen.scss */
+/* line 336, ../sass/screen.scss */
 #contactPage h6, #contactPage h4 {
   text-align: center;
 }
-/* line 313, ../sass/screen.scss */
+/* line 337, ../sass/screen.scss */
 #contactPage .wrapper {
   height: 600px;
   display: grid;
@@ -465,7 +499,7 @@ nav div ul li a i {
   grid-gap: 10px;
   grid-auto-rows: minmax(100px, auto);
 }
-/* line 319, ../sass/screen.scss */
+/* line 343, ../sass/screen.scss */
 #contactPage .wrapper .one {
   min-width: 220px;
   grid-column: 1;
@@ -474,32 +508,32 @@ nav div ul li a i {
   float: right;
   overflow: auto;
 }
-/* line 326, ../sass/screen.scss */
+/* line 350, ../sass/screen.scss */
 #contactPage .wrapper .one input {
   width: 200px;
 }
-/* line 327, ../sass/screen.scss */
+/* line 351, ../sass/screen.scss */
 #contactPage .wrapper .one div {
   width: auto;
   text-align: center;
   display: block;
   overflow: auto;
 }
-/* line 332, ../sass/screen.scss */
+/* line 356, ../sass/screen.scss */
 #contactPage .wrapper .one div form {
   width: 100%;
   text-align: center;
   margin-top: 20px;
 }
-/* line 336, ../sass/screen.scss */
+/* line 360, ../sass/screen.scss */
 #contactPage .wrapper .one div form .invalid {
   border: 2px solid red !important;
 }
-/* line 337, ../sass/screen.scss */
+/* line 361, ../sass/screen.scss */
 #contactPage .wrapper .one div form .valid {
   border: 2px solid lightgreen !important;
 }
-/* line 338, ../sass/screen.scss */
+/* line 362, ../sass/screen.scss */
 #contactPage .wrapper .one div form .errorMessage {
   height: 35px;
   font-size: .8em;
@@ -507,7 +541,13 @@ nav div ul li a i {
   display: block;
   margin: 0 auto;
 }
-/* line 348, ../sass/screen.scss */
+/* line 369, ../sass/screen.scss */
+#contactPage .wrapper .one div form span {
+  float: right;
+  font-size: .7em;
+  font-weight: 400;
+}
+/* line 377, ../sass/screen.scss */
 #contactPage .wrapper .two {
   min-width: 220px;
   grid-column: 2;
@@ -515,7 +555,7 @@ nav div ul li a i {
   display: block;
   padding-right: 30px;
 }
-/* line 355, ../sass/screen.scss */
+/* line 384, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox {
   border-radius: 2px;
   height: auto;
@@ -530,16 +570,16 @@ nav div ul li a i {
   display: block;
   box-shadow: 0 3px 5px rgba(100, 100, 100, 0.5);
 }
-/* line 368, ../sass/screen.scss */
+/* line 397, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox button {
   margin-bottom: 20px;
 }
-/* line 369, ../sass/screen.scss */
+/* line 398, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox #preview {
   padding: 10px 25px;
   background-color: rgba(200, 200, 200, 0.1);
 }
-/* line 373, ../sass/screen.scss */
+/* line 402, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox #title {
   width: auto;
   height: 40px;
@@ -550,7 +590,7 @@ nav div ul li a i {
   margin-left: 25px;
   text-align: left;
 }
-/* line 382, ../sass/screen.scss */
+/* line 411, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox #title i {
   color: lightgreen;
   font-size: 25px;
@@ -560,13 +600,13 @@ nav div ul li a i {
   right: 10px;
 }
 
-/* line 395, ../sass/screen.scss */
+/* line 424, ../sass/screen.scss */
 #success {
   margin-top: 150px;
   text-align: center;
 }
 
-/* line 400, ../sass/screen.scss */
+/* line 429, ../sass/screen.scss */
 .viewFade {
   margin-top: 140px;
   -webkit-animation: fadein .3s linear forwards;
@@ -584,39 +624,39 @@ nav div ul li a i {
     opacity: 1;
   }
 }
-/* line 410, ../sass/screen.scss */
+/* line 439, ../sass/screen.scss */
 .about {
   opacity: 0;
 }
 
-/* line 413, ../sass/screen.scss */
+/* line 442, ../sass/screen.scss */
 .about.animated {
   animation-name: intro;
   animation-duration: 1s;
   animation-fill-mode: forwards;
 }
 
-/* line 418, ../sass/screen.scss */
+/* line 447, ../sass/screen.scss */
 .about.animated:nth-child(2) {
   animation-delay: .3s;
 }
 
-/* line 419, ../sass/screen.scss */
+/* line 448, ../sass/screen.scss */
 .about.animated:nth-child(3) {
   animation-delay: 1.8s;
 }
 
-/* line 420, ../sass/screen.scss */
+/* line 449, ../sass/screen.scss */
 .about.animated:nth-child(4) {
   animation-delay: 3.5s;
 }
 
-/* line 422, ../sass/screen.scss */
+/* line 451, ../sass/screen.scss */
 .list {
   opacity: 0;
 }
 
-/* line 425, ../sass/screen.scss */
+/* line 454, ../sass/screen.scss */
 .list.animated {
   animation-name: fadeInDown;
   animation-duration: 1s;
@@ -624,52 +664,52 @@ nav div ul li a i {
   animation-fill-mode: forwards;
 }
 
-/* line 431, ../sass/screen.scss */
+/* line 460, ../sass/screen.scss */
 .list.animated:nth-child(2) {
   animation-delay: 5.6s;
 }
 
-/* line 432, ../sass/screen.scss */
+/* line 461, ../sass/screen.scss */
 .list.animated:nth-child(3) {
   animation-delay: 6.2s;
 }
 
-/* line 433, ../sass/screen.scss */
+/* line 462, ../sass/screen.scss */
 .list.animated:nth-child(4) {
   animation-delay: 6.8s;
 }
 
-/* line 434, ../sass/screen.scss */
+/* line 463, ../sass/screen.scss */
 .list.animated:nth-child(5) {
   animation-delay: 7.4s;
 }
 
-/* line 435, ../sass/screen.scss */
+/* line 464, ../sass/screen.scss */
 .list.animated:nth-child(6) {
   animation-delay: 8.0s;
 }
 
-/* line 436, ../sass/screen.scss */
+/* line 465, ../sass/screen.scss */
 .list.animated:nth-child(7) {
   animation-delay: 8.6s;
 }
 
-/* line 437, ../sass/screen.scss */
+/* line 466, ../sass/screen.scss */
 .list.animated:nth-child(8) {
   animation-delay: 9.2s;
 }
 
-/* line 438, ../sass/screen.scss */
+/* line 467, ../sass/screen.scss */
 .list.animated:nth-child(9) {
   animation-delay: 9.8s;
 }
 
-/* line 439, ../sass/screen.scss */
+/* line 468, ../sass/screen.scss */
 .list.animated:nth-child(10) {
   animation-delay: 10.4s;
 }
 
-/* line 440, ../sass/screen.scss */
+/* line 469, ../sass/screen.scss */
 .list.animated:nth-child(11) {
   animation-delay: 11.0s;
 }
@@ -694,7 +734,7 @@ nav div ul li a i {
     transform: none;
   }
 }
-/* line 463, ../sass/screen.scss */
+/* line 492, ../sass/screen.scss */
 .hvr-grow {
   display: inline-block;
   vertical-align: middle;
@@ -706,14 +746,14 @@ nav div ul li a i {
   transition-property: transform;
 }
 
-/* line 473, ../sass/screen.scss */
+/* line 502, ../sass/screen.scss */
 .hvr-grow:hover,
 .hvr-grow:focus,
 .hvr-grow:active {
   transform: scale(1.1);
 }
 
-/* line 480, ../sass/screen.scss */
+/* line 509, ../sass/screen.scss */
 .hvr-float {
   display: inline-block;
   vertical-align: middle;
@@ -728,30 +768,30 @@ nav div ul li a i {
   transition-timing-function: ease-out;
 }
 
-/* line 493, ../sass/screen.scss */
+/* line 522, ../sass/screen.scss */
 .hvr-float:hover, .hvr-float:focus, .hvr-float:active {
   -webkit-transform: translateY(-8px);
   transform: translateY(-8px);
   color: black;
 }
-/* line 497, ../sass/screen.scss */
+/* line 526, ../sass/screen.scss */
 .hvr-float:hover i, .hvr-float:focus i, .hvr-float:active i {
   color: #ff5f14;
 }
 
 @media (max-width: 1060px) {
-  /* line 503, ../sass/screen.scss */
+  /* line 532, ../sass/screen.scss */
   .navbar-brand {
     visibility: hidden;
   }
 }
 @media (max-width: 766px) {
-  /* line 509, ../sass/screen.scss */
+  /* line 538, ../sass/screen.scss */
   .navbar-nav {
     padding-top: 40px;
   }
 
-  /* line 512, ../sass/screen.scss */
+  /* line 541, ../sass/screen.scss */
   #extLinks {
     visibility: hidden;
   }
