--- a/views/contact.html
+++ b/views/contact.html
@@ -1,6 +1,6 @@
 <script type="text/ng-template" id="error-messages">
   <div ng-message="required">This field is required</div>
-  <div ng-message="minlength">This field is too short</div>
+  <!-- <div ng-message="minlength">This field is too short</div> -->
   <div ng-message="email">Please enter a valid email</div>
 </script>
 
@@ -23,7 +23,6 @@
             ng-class="{'invalid': (form.first.$error && form.first.$touched), 'valid': (form.first.$valid && form.first.$touched)}"
             class="form-control"
             ng-model="formData.firstName"
-            ng-minlength="2"
             maxlength="20"
             required>
             </label>
@@ -43,7 +42,6 @@
             ng-class="{'invalid': (form.last.$error && form.last.$touched), 'valid': (form.last.$valid && form.last.$touched)}"
             class="form-control"
             ng-model="formData.lastName"
-            ng-minlength="2"
             maxlength="20"
             required>
           </label>
@@ -86,6 +84,8 @@
           cols="30"
           required>
           </textarea>
+          <span id="charCount">{{1000-formData.contactMessage.length}} characters left</span>
+
           </label>
 
           <div class="errorMessage">
@@ -112,7 +112,7 @@
         From: <strong>{{formData.firstName}} {{formData.lastName}}</strong>
       </p>
       <p>
-        Contact at <strong>{{formData.contactEmail}}</strong>
+        Contact at: <strong>{{formData.contactEmail}}</strong>
       </p>
       <p>
         Message: <strong>{{formData.contactMessage}}</strong>
