--- a/views/contact.html
+++ b/views/contact.html
@@ -56,7 +56,7 @@
           <label>Contact Email
           <input
             type="email"
-            placeholder="Seymour.Butz@gmail.com"
+            placeholder="Seymour.Boots@gmail.com"
             name="email"
             ng-class="{'invalid': (form.email.$error && form.email.$touched), 'valid': (form.email.$valid && form.email.$touched)}"
             class="form-control"
